--- a/index.html
+++ b/index.html
@@ -166,12 +166,90 @@
         <div class="trending_before">
             <p>TRENDING TRAILERS</p>
         </div>
-        <div class="inside_container">
-            <div class="inside_item inside_item_active">
-                <div class="inside_img_container">
-                    <img class="inside_item_img" src="img/inside/inside1_p.jpg"/>
-                </div>
-            </div>
+        <div class="inside_container" id="trending_container">
+            <ul id="trending_ul">
+                <li data-rank="0" data-opt="trending" style="left:0;">
+                    <div class="trending_item">
+                        <div class="trending_item_description">
+                            <h4>INTRODUCING UBISOFT WINNIPEG</h4>
+                            <div class="trending_item_description_text">
+                                <div class="trending_item_description_text_whole">
+                                    The newest addition to the Ubisoft Canadian studios family is taking inclusion to the next level.
+                                </div>
+                                <div class="trending_item_button_container">
+                                    <div class="trending_item_button">WATCH NOW</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending_img_container">
+                            <img class="trending_item_img" src="img/trending/assassins.jpg"/>
+                        </div>
+                    </div>
+                </li>
+                <li data-rank="1" data-opt="trending" style="left:50vw;">
+                    <div class="trending_item trending_item_active">
+                        <div class="trending_item_description">
+                            <h4>Say hello to SAM</h4>
+                            <div class="trending_item_description_text">
+                                <div class="trending_item_description_text_whole">Need to master a zone, discover the latest version, or get answers on anything Ubisoft? Need to master a zone, discover the latest version, or get answers on anything Ubisoft? Type or speak a question for Sam and find what you need in seconds.
+                                </div>
+                                <div class="trending_item_button_container">
+                                    <div class="trending_item_button">MEET SAM</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending_img_container">
+                            <img class="trending_item_img" src="img/trending/farcry.jpg"/>
+                        </div>
+                    </div>
+                </li>
+                <li data-rank="2" data-opt="trending" style="left:100vw;">
+                    <div class="trending_item">
+                        <div class="trending_item_description">
+                            <h4>LIFE AT UBISOFT</h4>
+                            <div class="trending_item_description_text">
+                                <div class="trending_item_description_text_whole">Wonder what it's like to work at Ubisoft? Get the trending scoop!</div>
+                                <div class="trending_item_button_container">
+                                    <div class="trending_item_button">WATCH NOW</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending_img_container">
+                            <img class="trending_item_img" src="img/trending/honor.jpg"/>
+                        </div>
+                    </div>
+                </li>
+                <li data-rank="3" data-opt="trending" style="left:150vw;">
+                    <div class="trending_item">
+                        <div class="trending_item_description">
+                            <h4>REINVENTING THE GAME</h4>
+                            <div class="trending_item_description_text"><div class="trending_item_description_text_whole">AI is revolutionizing the way Ubisoft developers make better, more realistic games.</div>
+                                <div class="trending_item_button_container">
+                                    <div class="trending_item_button">LEARN MORE</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending_img_container">
+                            <img class="trending_item_img" src="img/trending/rainbow.jpg"/>
+                        </div>
+                    </div>
+                </li>
+                <li data-rank="4" data-opt="trending" style="left:200vw;">
+                    <div class="trending_item">
+                        <div class="trending_item_description">
+                            <h4>REINVENTING THE GAME</h4>
+                            <div class="trending_item_description_text"><div class="trending_item_description_text_whole">AI is revolutionizing the way Ubisoft developers make better, more realistic games.</div>
+                                <div class="trending_item_button_container">
+                                    <div class="trending_item_button">LEARN MORE</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trending_img_container">
+                            <img class="trending_item_img" src="img/trending/starlink.jpg"/>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
         <div class="trending_after">
         </div>
