--- a/index.html
+++ b/index.html
@@ -277,6 +277,17 @@
             <a href="https://news.ubisoft.com/" target="_blank"><button class="function_btn">ALL NEWS</button></a>
         </div>
     </div>
+    <div class="more">
+        <h4>EXPLORE MORE GAMES</h4>
+
+
+        
+
+
+        <div class="news_btn_container">
+            <a href="https://www.ubisoft.com/en-us/games" target="_blank"><button class="function_btn">VIEW ALL GAMES</button></a>
+        </div>
+    </div>
     <div class="inside">
         <div class="inside_before">
             <p>INSIDE UBISOFT</p>
