make few changes

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <div class="more">
         <h4>EXPLORE MORE GAMES</h4>
         <div class="more_games" id="more_games">
-            <div class="more_games_container" id="more_container1" data-row="1">
+            <div class="more_games_container more_games_container_active" id="more_container1" data-row="1">
                 <div class="game_box">
                     <div class="game_box_img_container">
                         <img src="img/loading.png" data-src="img/fish.jpg"/>
@@ -576,7 +576,7 @@
                     <p class="game_box_description">Available Now!</p>
                 </div>
             </div>
-            <div class="more_games_container more_games_row_2" id="more_container2" data-row="2">
+            <div class="more_games_container more_games_row_2 more_games_container_active" id="more_container2" data-row="2">
                 <div class="game_box">
                     <div class="game_box_img_container">
                         <img src="img/loading.png" data-src="img/fish.jpg"/>
