--- a/index.html
+++ b/index.html
@@ -873,6 +873,27 @@
                 </div>
             </div>
         </div>
+        <div class="more_control_container">
+            <div class="more_control" id="more_back">
+                <img id="more_back_img" src="img/left.png"/>
+            </div>
+            <ul class="more_nav" id="more_nav">
+                <li class="more_dot more_dot_active"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+                <li class="more_dot"></li>
+            </ul>
+            <div class="more_control" id="more_go">
+                <img id="more_go_img" src="img/right.png"/>
+            </div>
+        </div>
+
         <div class="news_btn_container">
             <a href="https://www.ubisoft.com/en-us/games" target="_blank"><button class="function_btn">VIEW ALL GAMES</button></a>
         </div>
