--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                 </div>
             </div>
             <div class="links_right">
-                <div class="language">UBISOFT IN:<br>
+                <div class="language"><p style="color: #888787;font-size: 12.5px;">UBISOFT IN:</p>
                     <img src="img/loading.png" data-src="img/global.png"/> ENGLISH
                 </div><br>
                 <a href="http://www.esrb.org/confirm/ubisoft-confirmation.jsp"><img src="img/loading.png" data-src="img/ESRB.jpg"/></a>
