--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/ubi.css">
 </head>
 <body>
-<div id="root">
+<div id="root" class="root">
     <div id="mobile_nav_panel" class="mobile_nav_panel">
         <div class="mobile_nav_close" id="mobile_nav_close">
         </div>
